--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Graduation Vacation">
-  <meta name="author" content="Chris Gazley">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
   <title>Modern Business - Start Bootstrap Template</title>
 
@@ -23,8 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <img src="images/gv_logo.png">
-      <a class="navbar-brand" href="index.html">Graduation Vacations</a>
+      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,10 +40,10 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Destinations
+              Portfolio
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="portfolio-1-col.html">Hawaii</a>
+              <a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a>
               <a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a>
               <a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a>
               <a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a>
